--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,16 @@
 @import "tw-animate-css";
 
 
+.sidebar-open ~ .main-content {
+  margin-left: 18rem;
+  width: calc(100% - 18rem);
+}
+
+.sidebar-closed ~ .main-content {
+  margin-left: 4rem;
+  width: calc(100% - 4rem);
+}
+
 @theme {
   --color-main-color:#102c5c;
   --color-second-color:#e67616;
